# skypro.tony.coursework3.PyDB

./: README.md  pyproject.toml
data/: README.md
logs/: README.md
src/: README.md
tests/: README.md
